--- a/application/admin/view/user_level_word/index.html
+++ b/application/admin/view/user_level_word/index.html
@@ -76,7 +76,7 @@
 
                 {if auth("$classuri/del")}
                 <span class="text-explode">|</span>
-                <a data-update="{$vo.id}" data-field='delete' data-action='{:url("$classuri/del")}'>删除</a>
+                <a data-update="{$vo.id}" data-field='status' data-action='{:url("$classuri/del")}'>删除</a>
                 {/if}
             </td>
             <td class='text-left nowrap'>
