--- a/application/admin/view/nickname/index.html
+++ b/application/admin/view/nickname/index.html
@@ -14,20 +14,20 @@
     <div class="layui-form-item layui-inline">
         <label class="layui-form-label">小程序名字</label>
         <div class="layui-input-inline">
-            <input name="word_level" value="{$Think.get.word_level|default=''}" placeholder="请输入想要搜索的小程序名字" class="layui-input">
+            <input name="tile" value="{$Think.get.tile|default=''}" placeholder="请输入想要搜索的小程序名字" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-inline">
         <label class="layui-form-label">APPID</label>
         <div class="layui-input-inline">
-            <input name="word_num" value="{$Think.get.word_num|default=''}" placeholder="请输入想要搜索的APPID" class="layui-input">
+            <input name="appid" value="{$Think.get.appid|default=''}" placeholder="请输入想要搜索的APPID" class="layui-input">
         </div>
     </div>
 
     <div class="layui-form-item layui-inline">
         <label class="layui-form-label">IP搜索</label>
         <div class="layui-input-inline">
-            <input name="word_num" value="{$Think.get.word_num|default=''}" placeholder="请输入想要搜索的IP" class="layui-input">
+            <input name="ips" value="{$Think.get.ips|default=''}" placeholder="请输入想要搜索的IP" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item layui-inline">
