--- a/application/admin/view/nickname/index.html
+++ b/application/admin/view/nickname/index.html
@@ -48,6 +48,7 @@
             <th class='text-left nowrap'>IP显示</th>
             <th class='text-left nowrap'>描述</th>
             <th class='text-left nowrap'>秘钥</th>
+            <th class='text-left nowrap'>创建者</th>
             <th class='text-left nowrap'>状态</th>
             
     	</tr>
@@ -84,6 +85,9 @@
             </td>
             <td class='text-left nowrap'>
                 {$vo.app_secret}
+            </td>
+            <td class='text-left nowrap'>
+                <?php echo isset($user_arr[$vo['admin_user_id']]) ? $user_arr[$vo['admin_user_id']] : ''; ?>
             </td>
             <td class='text-left nowrap'>
                 {if $vo.status eq 0}<span class="color-red">禁用</span>{elseif $vo.status eq 1}<span class="color-green">启用</span>{/if}
