--- a/application/admin/view/pifu/form.html
+++ b/application/admin/view/pifu/form.html
@@ -20,6 +20,12 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">条件</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="tiaojian" required="required" value='{$vo.tiaojian|default=""}' pattern="" title="" placeholder="" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">背景描述</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="beijing" required="required" value='{$vo.beijing|default=""}' pattern="" title="请输入背景描述" placeholder="请输入背景描述" class="layui-input">
