--- a/application/bxdj/view/step_coin_log/index.html
+++ b/application/bxdj/view/step_coin_log/index.html
@@ -54,7 +54,7 @@
                 {$vo.id}
             </td>
             <td class='text-left nowrap'>
-                {$vo.avatar}
+                <img src="{$vo.avatar}"> 
             </td>
             <td class='text-left nowrap'>
                 {$vo.openid}
