--- a/application/bxdj/view/user_record/index.html
+++ b/application/bxdj/view/user_record/index.html
@@ -87,7 +87,7 @@
                 {$vo.id}
             </td>
             <td class='text-left nowrap'>
-                {$vo.avatar}
+                <img src="{$vo.avatar}"> 
             </td>
             <td class='text-left nowrap'>
                 {$vo.openid}
