--- a/application/bxdj/view/goods/form.html
+++ b/application/bxdj/view/goods/form.html
@@ -70,6 +70,13 @@
     </div>
 
     <div class="layui-form-item">
+        <label class="layui-form-label">排序</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="order" required="required" value='50' pattern="" title="" placeholder="排序" class="layui-input" style="width: 75%;">
+        </div>
+    </div>
+
+    <div class="layui-form-item">
         <label class="layui-form-label">是否启用</label>
         <div style="width: 35%;" class="layui-input-block">
                 <select  name="status" class="layui-select">
