--- a/application/bxdj/view/goods/index.html
+++ b/application/bxdj/view/goods/index.html
@@ -68,6 +68,7 @@
             <th class='text-left nowrap'>库存量</th>
             <th class='text-left nowrap'>所需燃力币</th>
             <th class='text-left nowrap'>所属分类</th>
+            <th class='text-left nowrap'>排序</th>
             <th class='text-left nowrap'>商品状态</th>
             
     	</tr>
@@ -107,6 +108,9 @@
                  {else}
                  精品好礼
                  {/if}
+            </td>
+            <td class='text-left nowrap'>
+                {$vo.order}
             </td>
 
             <td class='text-left nowrap'>
