--- a/application/bxdj/view/step_coin_log/index.html
+++ b/application/bxdj/view/step_coin_log/index.html
@@ -64,7 +64,7 @@
             </td>
 
             <td class='text-left nowrap'>
-                {$vo.steps}
+                {$vo.steps+$vo.reward_steps}
             </td>
        
             <td class='text-left nowrap'>
