--- a/application/qmxz/view/select_topic/index.html
+++ b/application/qmxz/view/select_topic/index.html
@@ -21,9 +21,18 @@
         </div>
     </div>
     <div class="layui-form-item layui-inline">
-        <label class="layui-form-label">话题ID</label>
+        <label class="layui-form-label">话题</label>
         <div class="layui-input-inline">
-            <input name="topic_id" value="{$Think.get.topic_id|default=''}" placeholder="请输入想要搜索的关键字" class="layui-input">
+            <select name='topic_id' class='layui-select' lay-verify="required" lay-search="">
+                <option value=''> - 所有话题 -</option>
+                <!--{foreach $topic_list as $k => $v}-->
+                <!--{if $Think.get.topic_id == $k}-->
+                <option selected="selected" value='{$k}'> - {$v} - </option>
+                <!--{else}-->
+                <option value='{$k}'> - {$v} - </option>
+                <!--{/if}-->
+                <!--{/foreach}-->
+            </select>
         </div>
     </div>
     <div class="layui-form-item layui-inline">
@@ -67,7 +76,7 @@
                 {$vo.id}
             </td>
             <td class='text-left nowrap'>
-                {$vo.topic_id}
+                <?php echo isset($topic_list[$vo['topic_id']]) ? $topic_list[$vo['topic_id']] : ''; ?>
             </td>
             <td class='text-left nowrap'>
                 {$vo.create_time|date='Y-m-d H:i:s'}
@@ -79,5 +88,6 @@
     </table>
     {if isset($page)}<p>{$page|raw}</p>{/if}
     <!--{/empty}-->
+    <script>window.form.render();</script>
 </form>
 {/block}
