--- a/application/qmxz/view/topic/index.html
+++ b/application/qmxz/view/topic/index.html
@@ -49,6 +49,8 @@
             <th class='text-left nowrap'>操作</th>
             <th class='text-left nowrap'>ID</th>
             <th class='text-left nowrap'>标题</th>
+            <th class='text-left nowrap'>图片展示</th>
+            <th class='text-left nowrap'>图片地址</th>
             <th class='text-left nowrap'>描述</th>
             <th class='text-left nowrap'>时间</th>
             
@@ -75,6 +77,12 @@
             </td>
             <td class='text-left nowrap'>
                 {$vo.title}
+            </td>
+            <td class='text-left nowrap'>
+                <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img}' />
+            </td>
+            <td class='text-left nowrap'>
+                {$vo.img}
             </td>
             <td class='text-left nowrap'>
                 <?php if(mb_strlen($vo['des'], "utf-8") > 20) { echo mb_substr($vo['des'], 0, 20, "UTF8") . '...'; } else { echo $vo['des']; }?>
