--- a/application/qmxz/view/special/form.html
+++ b/application/qmxz/view/special/form.html
@@ -12,6 +12,12 @@
         </div>
     </div>
     <div class="layui-form-item">
+        <label class="layui-form-label">图片地址</label>
+        <div class="layui-input-block">
+            <input type="text" autofocus name="img" value='{$vo.img|default=""}' required="required" pattern="" title="图片地址" placeholder="图片地址" class="layui-input">
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">显示时间</label>
         <div class="layui-input-block">
             <input name="display_time" id='display_time' value="{$vo.display_time|default=''}" placeholder="请选择时间" class="layui-input">
