--- a/application/qmxz/view/special/index.html
+++ b/application/qmxz/view/special/index.html
@@ -70,7 +70,8 @@
                 {$vo.img}
             </td>
             <td class='text-left nowrap'>
-                <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img}' />
+                <div>{$vo.prize_name}</div>
+                <img id="prize_img" data-tips-image style="height:auto;max-height:50px;min-width:50px" src='{$vo.prize_img}' />
             </td>
             <td class='text-left nowrap'>
                 {$vo.display_time|date='Y-m-d H:i'}
