--- a/application/qmxz/view/user_record/address.html
+++ b/application/qmxz/view/user_record/address.html
@@ -18,7 +18,7 @@
                     </thead>
                     <tbody>
                     <tr>
-                        <td>
+                        <td style="width: 50%">
                            {$st.region}
                         </td>
                         <td>
