--- a/application/qmxz/view/user_record/address.html
+++ b/application/qmxz/view/user_record/address.html
@@ -6,7 +6,7 @@
 
     <!--{else}-->
         <!-- {foreach $vo as $key=>$st}-->
-    	<div class="layui-form-item">
+    	<div class="layui-form-item" style="margin-left: 60px;">
             <label class="layui-form-label">收货地址信息：</label>
                 <table class="layui-table" lay-skin="line">
                     <thead>
