--- a/application/qmxz/view/user_record/address.html
+++ b/application/qmxz/view/user_record/address.html
@@ -2,7 +2,7 @@
 
     <!--{empty name='vo'}-->
 
-        <p class="help-block text-center well" style="width: 100%;">没 有 收 货 地 址 记 录 哦 ！</p>
+        <p class="help-block text-center well" style="width: 100%; margin-left: 10px;">没 有 收 货 地 址 记 录 哦 ！</p>
 
     <!--{else}-->
         <!-- {foreach $vo as $key=>$st}-->
