修改普通场和整点场逻辑

--- a/application/qmxz/view/special_word/index.html
+++ b/application/qmxz/view/special_word/index.html
@@ -49,8 +49,7 @@
             <th class='text-left nowrap'>整点场</th>
             <th class='text-left nowrap'>标题</th>
             <th class='text-left nowrap'>描述</th>
-            <th class='text-left nowrap'>左选项</th>
-            <th class='text-left nowrap'>右选项</th>
+            <th class='text-left nowrap'>选项</th>
             <th class='text-left nowrap'>创建时间</th>
     	</tr>
     	</thead>
@@ -81,10 +80,7 @@
                 {$vo.des}
             </td>
             <td class='text-left nowrap'>
-                {$vo.left_option}
-            </td>
-            <td class='text-left nowrap'>
-                {$vo.right_option}
+                {$vo.options}
             </td>
             <td class='text-left nowrap'>
                 {$vo.create_time|date='Y-m-d H:i:s'}
