--- a/application/qmxz/view/special_word/edit.html
+++ b/application/qmxz/view/special_word/edit.html
@@ -1,47 +1,50 @@
 <form class="layui-form layui-box modal-form-box" action="{:request()->url()}" data-auto="true" method="post">
-    <div class="layui-form-item">
-        <label class="layui-form-label">话题</label>
+	<div class="layui-form-item">
+        <label class="layui-form-label">整点场选择</label>
         <div class="layui-input-block">
-                <select name="topic_id" class="layui-select" style="width: 75%;">
-                    <!--{foreach topic_list as $key=>$st}-->
-                    <!--{if (!isset($vo['topic_id']) AND $key eq 1) OR (isset($vo['topic_id']) AND $vo.topic_id eq $key)}-->
-                    <option selected value="{$key}">- {$st} -</option>
-                    <!--{else}-->
-                    <option value="{$key}">- {$st} -</option>
-                    <!--{/if}-->
-                    <!--{/foreach}-->
+                <select id="special_id" name="special_id" lay-verify="required" class="layui-select" lay-search>
+                	<option value="">- 请选择 -</option>
+                	<!--{foreach $special_list as $key=>$st}-->
+                	<!--{if isset($vo['special_id']) AND $vo.special_id eq $key}-->
+                	<option selected value="{$key}">- {$st} -</option>
+	                <!--{else}-->
+	                <option value="{$key}">- {$st} -</option>
+	                <!--{/if}-->
+                	<!--{/foreach}-->
                 </select>
         </div>
     </div>
     <div class="layui-form-item">
         <label class="layui-form-label">标题</label>
         <div class="layui-input-block">
-            <input type="text" autofocus name="title" required="required" value='{$vo.title|default=""}' pattern="" title="标题" placeholder="标题" class="layui-input">
+            <input type="text" autofocus name="title" value='{$vo.title|default=""}' required="required" pattern="" title="标题" placeholder="标题" class="layui-input">
         </div>
     </div>
+
     <div class="layui-form-item">
         <label class="layui-form-label">描述</label>
         <div class="layui-input-block">
-            <input type="text" autofocus name="des" required="required" value='{$vo.des|default=""}' pattern="" title="描述" placeholder="描述" class="layui-input">
+            <input type="text" autofocus name="des" value='{$vo.des|default=""}' required="required" pattern="" title="描述" placeholder="描述" class="layui-input">
         </div>
     </div>
     <div class="layui-form-item" id="test">
         <label class="layui-form-label">选项</label>
         <div class="layui-input-block ">
-            <div id="string">
-                <input type="text" autofocus name="value" required="required" value='' pattern="" title="" placeholder="请输入选项值" class="layui-input" style="width: 75%;">
-            </div>
+            <?php $options =  json_decode($vo['options']); ?>
+            {foreach $options as $k=>$v}
             <div class="layui-row arr">
                 <div class="layui-col-md9">
-                    <input type="text" autofocus name="options[]" required="required" value='' pattern="" title="" placeholder="请输入选项值" class="layui-input">
+                    <input type="text" autofocus name="options[]" required="required" value="{$v|default=''}" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">
                 </div>
                 <div class="layui-col-md3">
                     <button class="layui-btn add" style="margin-left: 10px;">添加</button>
                 </div>
             </div>
+            {/foreach}
         </div>
     </div>
-    <div class="layui-form-item text-center">
+
+	<div class="layui-form-item text-center">
         {if isset($vo['id'])}<input type='hidden' value='{$vo.id}' name='id'>{/if}
         <button class="layui-btn" type='submit'>保存数据</button>
         <button class="layui-btn layui-btn-danger" type='button' data-confirm="确定要取消编辑吗？" data-close>取消编辑</button>
