--- a/application/qmxz/view/special_word/form.html
+++ b/application/qmxz/view/special_word/form.html
@@ -27,18 +27,20 @@
             <input type="text" autofocus name="des" value='{$vo.des|default=""}' required="required" pattern="" title="描述" placeholder="描述" class="layui-input">
         </div>
     </div>
-
-    <div class="layui-form-item">
-        <label class="layui-form-label">左选项</label>
-        <div class="layui-input-block">
-            <input type="text" autofocus name="left_option" value='{$vo.left_option|default=""}' required="required" pattern="" title="左选项" placeholder="左选项" class="layui-input">
-        </div>
-    </div>
-
-    <div class="layui-form-item">
-        <label class="layui-form-label">右选项</label>
-        <div class="layui-input-block">
-            <input type="text" autofocus name="right_option" value='{$vo.right_option|default=""}' required="required" pattern="" title="右选项" placeholder="右选项" class="layui-input">
+    <div class="layui-form-item" id="test">
+        <label class="layui-form-label">选项</label>
+        <div class="layui-input-block ">
+            <div id="string">
+                <input type="text" autofocus name="value" required="required" value='' pattern="" title="" placeholder="请输入选项值" class="layui-input" style="width: 75%;">
+            </div>
+            <div class="layui-row arr">
+                <div class="layui-col-md9">
+                    <input type="text" autofocus name="options[]" required="required" value='' pattern="" title="" placeholder="请输入选项值" class="layui-input">
+                </div>
+                <div class="layui-col-md3">
+                    <button class="layui-btn add" style="margin-left: 10px;">添加</button>
+                </div>
+            </div>
         </div>
     </div>
 
@@ -48,4 +50,55 @@
         <button class="layui-btn layui-btn-danger" type='button' data-confirm="确定要取消编辑吗？" data-close>取消编辑</button>
     </div>
     <script>window.form.render();</script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+            $('.layui-form-select').css('width', '75%');
+            var type = $("#type option:selected").val();
+
+            if(type == 1){
+                $(".arr").hide();
+                $(".arr").find('input').removeAttr('required');
+            }else{
+                $("#string").hide();
+                $("#string").find('input').removeAttr('required');
+            }
+        });
+
+        layui.use('form', function(){
+            var form = layui.form;
+            form.on('select(type)', function(data){
+                var type = data.value;
+                if(type == 1){
+                    $(".arr").hide();
+                    $("#string").show();
+                    $(".arr").find('input').removeAttr('required');
+                    $("#string").find('input').attr('required', 'required');
+                }else{
+                    $("#string").hide();
+                    $(".arr").show();
+                    $("#string").find('input').removeAttr('required');
+                    $(".arr").find('input').attr('required', 'required');
+                }
+            });
+
+        });
+
+        $("#test").on('click', '.add', function(){
+            var html = '<div class="layui-row arr">';
+            html += '<div class="layui-col-md9" style="margin-top:5px;">';
+            html += '<input type="text" autofocus name="options[]" required="required" value="" pattern="" title="" placeholder="请输入选项值" class="layui-input">';
+            html += '</div><div class="layui-col-md3" style="margin-top:5px;">';
+            //html += '<button class="layui-btn add" style="margin-left: 10px;">添加</button>';
+            html += '<button class="layui-btn del layui-btn-danger" style="margin-left: 10px;">删除</button>';
+            html +='<div></div>';
+
+            $(this).parent().parent().parent().append(html);
+            $("#test").children("div").children("div.arr").last().find("input").focus();
+        });
+
+       $("#test").on('click', '.del', function(){
+            $(this).parent().parent().remove();
+        });
+
+    </script>
 </form>
