--- a/application/qmxz/view/topic/index.html
+++ b/application/qmxz/view/topic/index.html
@@ -33,6 +33,21 @@
         </div>
     </div>
     <div class="layui-form-item layui-inline">
+        <label class="layui-form-label">分类</label>
+        <div class="layui-input-inline">
+            <select name='cate_id' class='layui-select' lay-verify="required" lay-search="">
+                <option value=''> - 所有分类 -</option>
+                <!--{foreach $topic_cate as $k => $v}-->
+                <!--{if $Think.get.cate_id == $k}-->
+                <option selected="selected" value='{$k}'> - {$v} - </option>
+                <!--{else}-->
+                <option value='{$k}'> - {$v} - </option>
+                <!--{/if}-->
+                <!--{/foreach}-->
+            </select>
+        </div>
+    </div>
+    <div class="layui-form-item layui-inline">
         <button class="layui-btn layui-btn-primary"><i class="layui-icon">&#xe615;</i> 搜 索</button>
     </div>
 </form>
@@ -48,8 +63,10 @@
     	<tr>
             <th class='text-left nowrap'>操作</th>
             <th class='text-left nowrap'>ID</th>
+            <th class='text-left nowrap'>分类</th>
             <th class='text-left nowrap'>标题</th>
             <th class='text-left nowrap'>描述</th>
+            <th class='text-left nowrap'>额外信息</th>
             <th class='text-left nowrap'>图片展示</th>
             <th class='text-left nowrap'>图片地址</th>
             <th class='text-left nowrap'>时间</th>
@@ -76,11 +93,18 @@
                 {$vo.id}
             </td>
             <td class='text-left nowrap'>
+                <?php echo isset($topic_cate[$vo['cate_id']]) ? $topic_cate[$vo['cate_id']] : ''; ?>
+            </td>
+            <td class='text-left nowrap'>
                 {$vo.title}
             </td>
             <td class='text-left nowrap'>
                 <?php if(mb_strlen($vo['des'], "utf-8") > 20) { echo mb_substr($vo['des'], 0, 20, "UTF8") . '...'; } else { echo $vo['des']; }?>
                 {//$vo.des}
+            </td>
+            <td class='text-left nowrap'>
+                <?php if(mb_strlen($vo['remark'], "utf-8") > 20) { echo mb_substr($vo['remark'], 0, 20, "UTF8") . '...'; } else { echo $vo['remark']; }?>
+                {//$vo.remark}
             </td>
             <td class='text-left nowrap'>
                 <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img}' />
