--- a/application/qmxz/view/topic_cate/index.html
+++ b/application/qmxz/view/topic_cate/index.html
@@ -21,21 +21,6 @@
         </div>
     </div>
     <div class="layui-form-item layui-inline">
-        <label class="layui-form-label">话题</label>
-        <div class="layui-input-inline">
-            <select name='topic_id' class='layui-select' lay-verify="required" lay-search="">
-                <option value=''> - 所有话题 -</option>
-                <!--{foreach $topic_list as $k => $v}-->
-                <!--{if $Think.get.topic_id == $k}-->
-                <option selected="selected" value='{$k}'> - {$v} - </option>
-                <!--{else}-->
-                <option value='{$k}'> - {$v} - </option>
-                <!--{/if}-->
-                <!--{/foreach}-->
-            </select>
-        </div>
-    </div>
-    <div class="layui-form-item layui-inline">
         <label class="layui-form-label">标题</label>
         <div class="layui-input-inline">
             <input name="title" value="{$Think.get.title|default=''}" placeholder="请输入想要搜索的关键字" class="layui-input">
@@ -63,10 +48,11 @@
     	<tr>
             <th class='text-left nowrap'>操作</th>
             <th class='text-left nowrap'>ID</th>
-            <th class='text-left nowrap'>话题ID</th>
             <th class='text-left nowrap'>标题</th>
             <th class='text-left nowrap'>描述</th>
-            <th class='text-left nowrap'>选项</th>
+            <th class='text-left nowrap'>额外信息</th>
+            <th class='text-left nowrap'>图片展示</th>
+            <th class='text-left nowrap'>图片地址</th>
             <th class='text-left nowrap'>时间</th>
             
     	</tr>
@@ -91,9 +77,6 @@
                 {$vo.id}
             </td>
             <td class='text-left nowrap'>
-                <?php echo isset($topic_list[$vo['topic_id']]) ? $topic_list[$vo['topic_id']] : ''; ?>
-            </td>
-            <td class='text-left nowrap'>
                 {$vo.title}
             </td>
             <td class='text-left nowrap'>
@@ -101,7 +84,14 @@
                 {//$vo.des}
             </td>
             <td class='text-left nowrap'>
-                {$vo['options']}
+                <?php if(mb_strlen($vo['remark'], "utf-8") > 20) { echo mb_substr($vo['remark'], 0, 20, "UTF8") . '...'; } else { echo $vo['remark']; }?>
+                {//$vo.remark}
+            </td>
+            <td class='text-left nowrap'>
+                <img id="img" data-tips-image style="height:auto;max-height:32px;min-width:32px" src='{$vo.img}' />
+            </td>
+            <td class='text-left nowrap'>
+                {$vo.img}
             </td>
             <td class='text-left nowrap'>
                 {$vo.create_time|date='Y-m-d H:i:s'}
@@ -113,6 +103,5 @@
     </table>
     {if isset($page)}<p>{$page|raw}</p>{/if}
     <!--{/empty}-->
-    <script>window.form.render();</script>
 </form>
 {/block}
