--- a/application/qmxz/view/topic_word/edit.html
+++ b/application/qmxz/view/topic_word/edit.html
@@ -28,17 +28,17 @@
     <div class="layui-form-item" id="test">
         <label class="layui-form-label">选项</label>
         <div class="layui-input-block ">
-            <div id="string">
-                <input type="text" autofocus name="value" required="required" value='' pattern="" title="" placeholder="请输入选项值" class="layui-input" style="width: 75%;">
-            </div>
+            <?php $options =  json_decode($vo['options']); ?>
+            {foreach $options as $k=>$v}
             <div class="layui-row arr">
                 <div class="layui-col-md9">
-                    <input type="text" autofocus name="options[]" required="required" value='' pattern="" title="" placeholder="请输入选项值" class="layui-input">
+                    <input type="text" autofocus name="options[]" required="required" value="{$v|default=''}" pattern="" title="" placeholder="请输入配置值(数组)，点击添加按钮添加下一个值" class="layui-input">
                 </div>
                 <div class="layui-col-md3">
                     <button class="layui-btn add" style="margin-left: 10px;">添加</button>
                 </div>
             </div>
+            {/foreach}
         </div>
     </div>
     <div class="layui-form-item text-center">
