--- a/application/qmxz/view/topic/form.html
+++ b/application/qmxz/view/topic/form.html
@@ -4,6 +4,7 @@
         <label class="layui-form-label">分类</label>
         <div class="layui-input-block">
                 <select name="cate_id" class="layui-select" style="width: 75%;">
+                    <option value="">- 请选择 -</option>
                     <!--{foreach topic_cate as $key=>$st}-->
                     <!--{if (!isset($vo['cate_id']) AND $key eq 1) OR (isset($vo['cate_id']) AND $vo.cate_id eq $key)}-->
                     <option selected value="{$key}">- {$st} -</option>
