--- a/application/qmxz/view/special_word/index.html
+++ b/application/qmxz/view/special_word/index.html
@@ -71,7 +71,7 @@
                 {$vo.id}
             </td>
             <td class='text-left nowrap'>
-                <?php echo isset($special_list[$vo['special_id']]) ? $special_list[$vo['special_id']] : ''; ?>
+                <?php echo isset($special_list[$vo['special_id']]) ? $special_list[$vo['special_id']] : '已过期场次'; ?>
             </td>
             <td class='text-left nowrap'>
                 {$vo.title}
