--- a/application/qmxz/view/special_word_warehouse/form.html
+++ b/application/qmxz/view/special_word_warehouse/form.html
@@ -1,5 +1,20 @@
 <form class="layui-form layui-box modal-form-box" action="{:request()->url()}" data-auto="true" method="post">
     <div class="layui-form-item">
+        <label class="layui-form-label">整点场选择</label>
+        <div class="layui-input-block">
+                <select id="special_id" name="special_warehouse_id" lay-verify="required" class="layui-select" lay-search>
+                    <option value="">- 请选择 -</option>
+                    <!--{foreach $special_warehouse_list as $key=>$st}-->
+                    <!--{if isset($vo['special_warehouse_id']) AND $vo.special_warehouse_id eq $key}-->
+                    <option selected value="{$key}">- {$st} -</option>
+                    <!--{else}-->
+                    <option value="{$key}">- {$st} -</option>
+                    <!--{/if}-->
+                    <!--{/foreach}-->
+                </select>
+        </div>
+    </div>
+    <div class="layui-form-item">
         <label class="layui-form-label">标题</label>
         <div class="layui-input-block">
             <input type="text" autofocus name="title" value='{$vo.title|default=""}' required="required" pattern="" title="标题" placeholder="标题" class="layui-input">
